--- a/deploy/deployment_ko.yaml
+++ b/deploy/deployment_ko.yaml
@@ -69,6 +69,10 @@ spec:
     spec:
       serviceAccountName: admission-registry-sa
       containers:
+      - args:
+        - --web.listen-address=:8443
+        - --config.file=/etc/webhook/config/config.json
+        - --web.enable-lifecycle
       - name: kubeadmission-webhook
         image: ko://git.harmonycloud.cn/yeyazhou/kubeadmission-webhook/cmd/kubeadmission-webhook
         imagePullPolicy: IfNotPresent
@@ -76,6 +80,26 @@ spec:
         - name: webhook-https
           protocol: TCP
           containerPort: 8443
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /-/healthy
+            port: 8443
+            scheme: HTTPS
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 5
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /-/ready
+            port: 8443
+            scheme: HTTPS
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 5
         resources:
           limits:
             cpu: 2
