--- a/deploy/deployment_ko.yaml
+++ b/deploy/deployment_ko.yaml
@@ -73,7 +73,7 @@ spec:
         - --web.listen-address=:8443
         - --config.file=/etc/webhook/config/config.json
         - --web.enable-lifecycle
-      - name: kubeadmission-webhook
+        name: kubeadmission-webhook
         image: ko://git.harmonycloud.cn/yeyazhou/kubeadmission-webhook/cmd/kubeadmission-webhook
         imagePullPolicy: IfNotPresent
         ports:
