--- a/deploy/webhookconfiguration/mutatingwebhookconfiguration​​-2.yaml
+++ b/deploy/webhookconfiguration/mutatingwebhookconfiguration​​-2.yaml
@@ -7,7 +7,7 @@ metadata:
 webhooks:
 - name: cn.harmonycloud.admission-registry
   rules:
-  - apiGroups:   [""]
+  - apiGroups:   ["apps",""]
     apiVersions: ["v1"]
     operations:  ["CREATE","UPDATE"]
     resources:   ["deployments"]
