--- a/deploy/deployment_ko.yaml
+++ b/deploy/deployment_ko.yaml
@@ -88,6 +88,7 @@ spec:
         - --tls.cert-file=/etc/webhook/certs/tls.crt
         - --tls.private-key-file=/etc/webhook/certs/tls.key
         - --web.enable-lifecycle
+        - --log.level=debug
         name: kubeadmission-webhook
         image: ko://git.harmonycloud.cn/yeyazhou/kubeadmission-webhook/cmd/kubeadmission-webhook
         imagePullPolicy: IfNotPresent
