--- a/deploy/webhookconfiguration/mutatingwebhookconfiguration​​.yaml
+++ b/deploy/webhookconfiguration/mutatingwebhookconfiguration​​.yaml
@@ -18,6 +18,6 @@ webhooks:
   admissionReviewVersions: ["v1", "v1beta1"]
   sideEffects: None
   timeoutSeconds: 5
-  namespaceSelector:
-    matchLabels:
-      admission-webhook: enabled
+  # namespaceSelector:
+  #   matchLabels:
+  #     admission-webhook: enabled
